# evio-evlib

./: .gitattributes  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  PERFORMANCE_OPTIMIZATION_SUMMARY.md  README.md  TASK12_COMPLETION_SUMMARY.md  flake.nix  pitch.md  pyproject.toml  tech-approach.md  tech-architecture.md  test_caching_flag.py  test_chunked_load.py  test_evlib_streaming.py  test_load_simple.py  test_memory_usage.py  test_mvp_verification.py  test_no_cache.py
.claude/skills/: dev-environment.md
dev-logs/: DETECTOR_DEMOS.md  DRONE_DETECTOR_DATASET_LIMITATIONS.md  DRONE_DETECTOR_MIGRATION_PLAN.md  MANUAL_TEST_VERIFICATION.md  NEXT_STEPS.md  TASK5_COMPLETION_REPORT.md  TASK5_MANUAL_TEST.md  TASK8_TEST_RESULTS.md  WIP-review.md  setup.md
docs/: 01_problem_statement.md  02_solution_approach.md  03_architecture.md  04_tech_stack.md  05_repo_structure.md  06_status.md  07_runbook.md  08_data_conversion.md  10_rvt_experiment.md  DEPRECATION-SUMMARY.md  DRONE_DETECTOR_DEBUG_SUMMARY.md  DRONE_DETECTOR_FINAL_STATUS.md  DRONE_DETECTOR_PARITY_RESTORATION_COMPLETE.md  PHASE1_SUMMARY.md  WIP-review.md  architecture.md  demo-workflow.md  demos.md  evlib-integration.md  rvt-detector.md  setup.md
docs/data/: datasets.json  datasets.md  evio-data-format.md
docs/libraries/: evlib.md  rvt.md
docs/plans/: 2025-11-15-drone-detector-parity-execution.md  2025-11-15-evlib-comparison-tests-design.md  2025-11-15-evlib-comparison-tests.md  2025-11-15-evlib-legacy-parity-tests-implementation.md  2025-11-15-infrastructure-fixes-design.md  2025-11-15-infrastructure-fixes-implementation.md  2025-11-15-legacy-evlib-parity-hdf5.md  2025-11-15-legacy-parity-implementation-summary.md  2025-11-15-nix-infrastructure-design.md  2025-11-15-nix-infrastructure-implementation.md  2025-11-15-python-downloader-blockers-resolution.md  2025-11-15-python-downloader-design-v2-fixes.md  2025-11-15-python-downloader-design-v2.md  2025-11-15-python-downloader-design.md  2025-11-15-python-downloader-implementation.md  2025-11-15-python-downloader-v2-implementation.md  2025-11-15-restore-drone-detector-exact-parity-corrected.md  2025-11-15-restore-drone-detector-exact-parity.md  2025-11-15-unzip-datasets-design.md  2025-11-16-deprecate-raw-to-evt3-pipeline.md  2025-11-16-detector-commons-evlib-integration.md  2025-11-16-drone-detector-verified-parity.md  2025-11-16-evlib-demo-ev3.md  2025-11-16-evlib-demo-implementation.md  2025-11-16-evlib-legacy-parity-tests.md  2025-11-16-evlib-visual-smoke-test.md  2025-11-16-fan-detector-evlib-integration-review.md  2025-11-16-legacy-dat-to-evlib-export.md  2025-11-16-mvp-demos-first-implementation.md  2025-11-16-mvp-launcher-critical-fixes.md  2025-11-16-mvp-launcher-implementation.md  2025-11-16-mvp-rendering-demo-design.md  2025-11-16-performance-optimization-ab.md  2025-11-16-visual-polish-completion.md  2025-11-16-visual-polish-implementation.md  2025-11-16-visual-polish-thumbnails-palette-design.md  READY-FOR-REVIEW.md  dat-to-h5-to-evlib-to-rvt.md  drone-detector-evlib-integration.md  evlib-comparison-test-findings.md  (+12 more)
docs/prod/: 03_architecture.md  04_tech_stack.md  05_repo_structure.md  06_status.md  09_drone_detection.md
evio/: flake.nix  pyproject.toml
evio/benchmarks/: __init__.py  bench_loading.py
evio/data/: README.md
evio/docs/: dat-format-compatibility.md  event_camera_challenge.md  evlib-rvt-architecture.md  evlib-rvt-poc.md  refactor-to-evlib.md
evio/scripts/: detector_utils.py  drone_detector_demo.py  fan_detector_demo.py  mvp_2_evlib.py  mvp_launcher.py  play_evlib.py
evio/tests/: test_events.py  test_evlib_loader.py  (+4 more)
scripts/: DIAGNOSTICS.md  compare_all_fan_files.py  convert_all_legacy_to_hdf5.sh  convert_evt3_raw_to_dat.py  convert_legacy_dat_to_hdf5.py  diagnose_fan_data.py  generate_manifest.py  generate_thumbnails.py  run-detector.sh  unzip-rvt-checkpoints.sh
tmp/: check_drone_frames.py  drone-detector-comparison.md  task-11-verification-report.md
workspace/apps/detector-ui/: README.md  pyproject.toml
workspace/apps/detector-ui/src/detector_ui/: __init__.py  main.py
workspace/libs/evio-core/: README.md  pyproject.toml
workspace/libs/evio-core/src/evio_core/: __init__.py
workspace/libs/evio-core/tests/: test_evlib_comparison.py  test_legacy_export.py  test_legacy_export_integration.py
workspace/libs/evio-core/tests/helpers/: __init__.py  legacy_export.py
workspace/libs/rvt-adapter/: README.md  pyproject.toml
workspace/libs/rvt-adapter/src/rvt_adapter/: __init__.py  helpers.py
workspace/libs/rvt-adapter/tests/: test_helpers.py
workspace/plugins/rvt-detection/: README.md  pyproject.toml
workspace/plugins/rvt-detection/models/: rvt-b-1mpx.ckpt  rvt-b-gen1.ckpt  rvt-s-1mpx.ckpt  rvt-s-gen1.ckpt  rvt-t-1mpx.ckpt  rvt-t-gen1.ckpt
workspace/plugins/rvt-detection/src/rvt_detector/: __init__.py  env_check.py  plugin.py
workspace/plugins/rvt-detection/tests/: test_env_check.py  test_plugin_units.py
workspace/tools/detector-commons/: pyproject.toml
workspace/tools/detector-commons/src/detector_commons/: __init__.py  clustering.py  loaders.py  representations.py  temporal.py
workspace/tools/downloader/: README.md  pyproject.toml
workspace/tools/downloader/src/downloader/: __init__.py  cli.py  download.py  drive.py  manifest.py  progress.py  verification.py
workspace/tools/drone-detector-demo/: pyproject.toml
workspace/tools/drone-detector-demo/src/drone_detector_demo/: __init__.py  geometry.py  main.py
workspace/tools/drone-detector-demo/tests/: __init__.py  test_parity.py
workspace/tools/evio-verifier/: pyproject.toml
workspace/tools/evio-verifier/src/evio_verifier/: __init__.py  cli.py
workspace/tools/evlib-examples/: README.md  pyproject.toml
workspace/tools/evlib-examples/src/evlib_examples/: __init__.py  raw_demo.py  raw_player.py
workspace/tools/fan-rpm-demo/: pyproject.toml
workspace/tools/fan-rpm-demo/src/fan_rpm_demo/: __init__.py  geometry.py  main.py
(+27 files in other folders)
