[tool.uv.workspace]
members = [
    "evio",
    "workspace/libs/*",
    "workspace/plugins/*",
    "workspace/apps/*",
    "workspace/tools/*",
]

[tool.uv]
# Python version requirements are specified in each workspace member's pyproject.toml


[project]
name = "evio-evlib-root"
version = "0.1.0"
requires-python = ">=3.11,<3.12"
