[project]
name = "detector-ui"
version = "0.1.0"
description = "Interactive event camera detection workbench"
requires-python = ">=3.11"
dependencies = [
    "evio>=0.4.0",
    "evio-core",
    "rvt-detector",
    "opencv-python>=4.8.0",
    "polars>=0.20.0",
]

[tool.uv.sources]
evio = { workspace = true }
evio-core = { workspace = true }
rvt-detector = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
