[project]
name = "evio-core"
version = "0.1.0"
description = "Core event camera processing library with evlib integration"
requires-python = ">=3.11"
dependencies = [
    "evlib>=0.8.0",
    "polars>=0.20.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
