[project]
name = "rvt-detector"
version = "0.1.0"
description = "RVT detector plugin for the evio-evlib workbench"
readme = "README.md"
requires-python = ">=3.11,<3.12"
authors = [{ name = "Sensofusion" }]
license = { text = "MIT" }
dependencies = [
    "evio>=0.4.0",
    "rvt-adapter",
    "torch>=2.0,<3.0",
    "torchvision>=0.15",
    "pytorch-lightning>=1.8.6,<3.0",
    "hydra-core>=1.3.2",
    "einops>=0.6.0",
    "opencv-python>=4.11.0",
    "polars>=0.20.0",
    "pycocotools>=2.0.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
]

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.uv.sources]
evio = { workspace = true }
rvt-adapter = { workspace = true }
