[project]
name = "detector-commons"
version = "0.1.0"
description = "Shared evlib utilities for event camera detectors"
requires-python = ">=3.11"
dependencies = [
    "evlib>=0.8.0",
    "polars>=0.20.0",
    "numpy>=1.24.0",
    "opencv-python>=4.8.0",
    "scikit-learn>=1.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/detector_commons"]
