[project]
name = "downloader"
version = "0.1.0"
description = "Event camera dataset downloader with parallel streaming"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.9.0",
    "rich>=13.0.0",
    "aiofiles>=23.0.0",
]

[project.scripts]
download-datasets = "downloader.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
