[project]
name = "drone-detector-demo"
version = "0.1.0"
description = "Drone propeller detector using evlib and detector-commons"
requires-python = ">=3.11"
dependencies = [
    "detector-commons",
    "numpy>=1.24.0",
    "opencv-python>=4.8.0",
]

[project.scripts]
drone-detector-demo = "drone_detector_demo.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/drone_detector_demo"]

[tool.uv.sources]
detector-commons = { workspace = true }
