[project]
name = "evio-verifier"
version = "0.1.0"
description = "CLI helper that validates EVT3 .dat files by loading them through evlib"
requires-python = ">=3.11"
dependencies = [
    "evlib>=0.2.2",
    "polars>=0.20.0",
]

[project.scripts]
verify-dat = "evio_verifier.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
