[project]
name = "fan-rpm-demo"
version = "0.1.0"
description = "Fan RPM detector using evlib and detector-commons"
requires-python = ">=3.11"
dependencies = [
    "detector-commons",
    "numpy>=1.24.0",
    "opencv-python>=4.8.0",
    "matplotlib>=3.7.0",
]

[project.scripts]
fan-rpm-demo = "fan_rpm_demo.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fan_rpm_demo"]

[tool.uv.sources]
detector-commons = { workspace = true }
